# anitr-cli-windows

./: .SRCINFO  .gitignore  CMakeLists.txt  CONTRIBUTING.md  PKGBUILD  README.md  animecix-cli.cpp  anitr-cli.bat  anitr-cli.cpp  anitr-cli.py  anitr-cli.windows.py  openanime-cli.cpp  requirements.txt  update-anitr-cli.sh
modules/: anitr_fetch.cpp  config.py  discord_rpc.py  fetch.py  player.py  ui.py  update.py  utils.py
rofi themes/: anime.rasi
